<resources>
    <string name="app_name">RID from Blockchain</string>
    <string name="app_name_login">Read Investments Data</string>
    <string name="welcome">Welcome Back!</string>

    <string name="dash_text_logo">Dash text logo</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>

    <string name="restore_password">Forgot Password?</string>
    <string name="new_account">Create Account</string>

    <string name="welcome_sign_up">Welcome!</string>
    <string name="nickname_hint">Nickname</string>
    <string name="email_hint">Email</string>
    <string name="password_confirmation_hint">Password confirmation</string>

    <string name="sign_up_btn">Sign up</string>

    <string name="chart_bar">Display bar chart</string>
    <string name="chart_pie">Display pie chart</string>
    <string name="header_title">Investments Data</string>

    <string name="date_picker">Choose Period</string>
    <string name="date_from">From</string>
    <string name="date_to">To</string>
    <string name="picker_hint">yyyy/mm/dd</string>

    <string name="report">Report</string>
    <string name="report_btn">Generate Report</string>

    <string name="export">Export</string>
    <string name="exp_excel">Export to Excel</string>
    <string name="exp_csv">Download .csv</string>

    <string name="sign_out_btn">Sign Out</string>

    <string name="budget_proposals">Budget Proposals</string>

    <string name="proposal_name">Name</string>
    <string name="amount">Amount</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="abstain">Abstain</string>
    <string name="funded">Funded</string>

    <string name="incubator">Dash Incubator</string>
    <string name="dmh">Marketing Hub</string>
    <string name="test_proposal">Test Proposal</string>
    <string name="crowd_node">CrowdNode</string>

    <string name="amount_400">400 DASH</string>
    <string name="amount_240">240 DASH</string>
    <string name="amount_523">523 DASH</string>
    <string name="amount_12443">12443 DASH</string>

    <string name="yes_234">234</string>
    <string name="yes_200">200</string>
    <string name="yes_24">24</string>
    <string name="yes_245">245</string>

    <string name="no_32">32</string>
    <string name="no_23">23</string>
    <string name="no_57">57</string>
    <string name="no_189">189</string>

    <string name="abstain_12">12</string>
    <string name="abstain_17">17</string>
    <string name="abstain_1">1</string>
    <string name="abstain_23">23</string>

    <string name="watchlist">Watchlist</string>
    <string name="added_at">Added at</string>
    <string name="date_time">2022-06-10 11:25:45</string>
    <string name="build_chart">Build Chart</string>
    
    <string name="details">Proposal Details</string>
    <string name="proposal_url">Proposal URL:</string>
    <string name="test_url">https://cool_proposal.com</string>
    <string name="add_watchlist">Add to watchlist</string>
    <string name="remove_watchlist">Remove from watchlist</string>
</resources>